--- a/server/.env.example
+++ b/server/.env.example
@@ -1,18 +1,4 @@
-# Server Configuration
+MONGO_URI=mongodb+srv://kavindu_db_user:Rmmktb0928@aspireai.cszknbh.mongodb.net/?appName=aspireai
 PORT=8080
-NODE_ENV=development
-
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRE=7d
-
-# Database Configuration
-DB_USER=postgres
-DB_PASSWORD=your_password_here
-DB_NAME=RP
-DB_HOST=localhost
-DB_PORT=5432
-DB_DIALECT=postgres
-
-# CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+NODE_ENV=development
