--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
+    "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "next": "15.5.5",
     "react": "19.1.0",
