--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -57,7 +57,7 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Postgres client (to check readiness)
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
