--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -59,5 +59,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Run dev
+        run: npm run dev
