--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -59,5 +59,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run dev
-        run: npm run dev
+      - name: build
+        run: npm run build
