--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -15,21 +15,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
     defaults:
       run:
         working-directory: server
@@ -39,12 +24,12 @@ jobs:
       PORT: 8080
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
       JWT_EXPIRE: 7d
-      DB_USER: postgres
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      DB_HOST: localhost
-      DB_PORT: 5432
-      DB_DIALECT: postgres
+      DB_DATABASE: ${{ secrets.DB_DATABASE }}
       CORS_ORIGIN: http://localhost:3000
 
     steps:
