--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
