--- a/server/package.json
+++ b/server/package.json
@@ -42,10 +42,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.0.0",
     "morgan": "^1.10.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2",
     "umzug": "^3.8.2"
   },
   "devDependencies": {
